--- a/_config.yml
+++ b/_config.yml
@@ -25,19 +25,15 @@ defaults:
     type: projects
   values:
     layout: project-page
-    is_featured: 
-    video_link: 
-    color: 
-    featured_thumbnail: 
-    next_project_banner: 
-    project_thumbnail: 
-    recent_thumbnail: 
+    is_featured:
+    video_link:
+    color:
+    project_type:
+    year:
     images:
-    - path: 
-      name: 
-      type: 
-    project_type: 
-    year: 
+    - large_image:
+    - medium_image:
+    - small_image:
 url: http://mad-universe.siteleaf.net
 permalink: pretty
 chris_email: chris@mad-universe.com
